--- a/index-carta.html
+++ b/index-carta.html
@@ -16,9 +16,9 @@
             <div class="envelope">
                 <div class="letter">
                     <div class="text">
-                        <strong>Querida Estrella</strong>
+                        <strong>Querida Karime</strong>
                         <p>
-                            Hoy es <strong>San Valentín</strong>, el día oficial de los <em>corazones</em>, el <em>chocolate</em> y las declaraciones de amor dramáticas (como en las telenovelas). Así que prepárate, porque aquí va la mía: Desde que te conocí, mi corazón late más rápido que <code>WiFi</code> gratis en una plaza pública. Eres más brillante que un mensaje de "<strong>te amo</strong>" en <strong>LED gigante</strong> y más dulce que el doble de caramelo en un café con extra de crema. Si fueras un algoritmo, serías el más eficiente: optimizas mi felicidad con la menor cantidad de esfuerzo. Si fueras un bug, serías el único que no querría corregir. Y si fueras una aplicación, serías la que siempre tengo anclada en mi pantalla principal. Gracias por hacer de mi vida una versión mejorada, sin errores (bueno, quizá con algunos, pero todos adorables). <br> <strong>Feliz San Valentín</strong>, mi <em>estrella favorita</em>. <br> Con mucho <strong>código</strong> (y <strong>amor</strong>), <br> Tu programador enamorado. <br> <span style="font-size: 0.9em; color: grey;">PD: Si esta carta fuera un programa, su salida sería:</span> <br> <code>"Eres lo mejor que me ha pasado."</code>
+                            Hoy es <strong>San Valentín</strong>, el día oficial de  <em>nuestro aniversario y San Valentin</em>, el <em>amor entre nostros</em> Espero que te guste mucho todo esto que te mando recuerda que eres alguien especial para mi y siempre de deseare siempre en todos los sentidos, <code>Espero mis buenas noches siempre.</code> Siempre me encanta verte y abrazarte porque "<strong>te amo</strong>" mi <strong>MI SENTIMENTAL</strong> y siempre seras mi Pochungita.  Gracias por estar en mi vida amorcito <br> <strong>Feliz San Valentín</strong>, mi <em>amorcito</em>. <br> Con mucho <strong>cariño y ganas</strong> (y <strong>amor</strong>), <br> Tu chico que te ama. <br> <span style="font-size: 0.9em; color: grey;">PD: TE AMOOOOOOOOOOOOOOO</span> <br> <code>"Eres mi nalgona favorita."</code>
                         </p>
                         
                     </div>
